qc pass: ppp tunneling with eoip
qc pass: lapb tunneling with eoip
qc pass: framerelay tunneling with eoip
qc pass: atmdxi tunneling with eoip
qc pass: isdn tunneling with eoip
qc pass: sep tunneling with eoip
qc pass: ethernet tunneling with eoip
qc pass: vlan tunneling with eoip
qc pass: tunnel interface with eoip
qc pass: eoip server
qc pass: ethernet over eoip pwhe
qc pass: cross connect with eoip
qc pass: cross connect interworking with eoip
---------------------------------- 2025-12-09 08:50:33 25.12.9
qc pass: p4lang: eoip over ipv4
qc pass: p4lang: eoip over ipv6
qc pass: p4lang: eoip over ipv4 loopback
qc pass: p4lang: eoip over ipv6 loopback
qc pass: p4lang: eoip over vlan
qc pass: p4lang: eoip over bundle
qc pass: p4lang: eoip over bundle vlan
qc pass: p4lang: eoip server over ipv4
qc pass: p4lang: eoip server over ipv6
qc pass: p4lang: eoip server over ipv4 loopback
qc pass: p4lang: eoip server over ipv6 loopback
---------------------------------- 2025-12-14 13:34:22 25.12.14
no qc pass: proxy server
qc pass: proxy over http
qc pass: ssh over http
qc pass: sdwan over http
---------------------------------- 2025-12-16 05:09:35 25.12.16
qc pass: sampled flow inspection
---------------------------------- 2025-12-16 05:40:37 25.12.16
qc pass: policed flow inspection
---------------------------------- 2025-12-16 19:02:52 25.12.16
no qc pass: ingress label filtering with pvrp
failed: ingress label filtering with pvrp
---------------------------------- 2025-12-16 19:30:22 25.12.16
no failed: ingress label filtering with pvrp
qc pass: ingress label filtering with pvrp
---------------------------------- 2025-12-17 00:25:34 25.12.16
qc pass: p4lang: monitor session
qc pass: p4lang: flow inspection
---------------------------------- 2025-12-19 12:03:18 25.12.19
qc pass: gue0 over ipv4
qc pass: gue0 over ipv6
qc pass: gue0 over gue0
qc pass: gue0 over loopback
qc pass: gue1 over ipv4
qc pass: gue1 over ipv6
qc pass: gue1 over gue1
qc pass: gue1 over loopback