@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.19-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-19 12:15:48, took 00:12:30, with 50 workers, on 4122 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2025-12-19 12:47:27, took 00:13:07, with 50 workers, on 4124 cases, 0 failed, 0 traces, 5 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -241,6 +241,7 @@ http://sources.freertr.org/cfg/conn-gue05.tst;conn-gue05.tst;success;gue1 over i
 http://sources.freertr.org/cfg/conn-gue06.tst;conn-gue06.tst;success;gue1 over ipv6
 http://sources.freertr.org/cfg/conn-gue07.tst;conn-gue07.tst;success;gue1 over gue1
 http://sources.freertr.org/cfg/conn-gue08.tst;conn-gue08.tst;success;gue1 over loopback
+http://sources.freertr.org/cfg/conn-gue09.tst;conn-gue09.tst;success;gue0 over gue1
 http://sources.freertr.org/cfg/conn-hairpin01.tst;conn-hairpin01.tst;success;ethernet hairpin
 http://sources.freertr.org/cfg/conn-hairpin02.tst;conn-hairpin02.tst;success;serial hairpin
 http://sources.freertr.org/cfg/conn-hairpin03.tst;conn-hairpin03.tst;success;bundle hairpin
@@ -1269,6 +1270,7 @@ http://sources.freertr.org/cfg/intop1-tacacs.tst;intop1-tacacs.tst;success;inter
 http://sources.freertr.org/cfg/intop1-tun01.tst;intop1-tun01.tst;success;interop1: gre tunnel
 http://sources.freertr.org/cfg/intop1-tun02.tst;intop1-tun02.tst;success;interop1: ipip tunnel
 http://sources.freertr.org/cfg/intop1-tun03.tst;intop1-tun03.tst;success;interop1: vxlan tunnel
+http://sources.freertr.org/cfg/intop1-tun04.tst;intop1-tun04.tst;success;interop1: udp tunnel
 http://sources.freertr.org/cfg/intop2-bgp01.tst;intop2-bgp01.tst;success;interop2: ebgp
 http://sources.freertr.org/cfg/intop2-bgp02.tst;intop2-bgp02.tst;success;interop2: ibgp
 http://sources.freertr.org/cfg/intop2-bgp03.tst;intop2-bgp03.tst;success;interop2: bgp locpref
