@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.19-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-19 12:15:48, took 00:12:30, with 50 workers, on 4122 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2025-12-19 12:47:27, took 00:13:07, with 50 workers, on 4124 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -253,6 +253,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gue06.tst">conn-gue06.tst</a></td><td>success</td><td>gue1 over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gue07.tst">conn-gue07.tst</a></td><td>success</td><td>gue1 over gue1</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gue08.tst">conn-gue08.tst</a></td><td>success</td><td>gue1 over loopback</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gue09.tst">conn-gue09.tst</a></td><td>success</td><td>gue0 over gue1</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-hairpin01.tst">conn-hairpin01.tst</a></td><td>success</td><td>ethernet hairpin</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-hairpin02.tst">conn-hairpin02.tst</a></td><td>success</td><td>serial hairpin</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-hairpin03.tst">conn-hairpin03.tst</a></td><td>success</td><td>bundle hairpin</td></tr>
@@ -1281,6 +1282,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-tun01.tst">intop1-tun01.tst</a></td><td>success</td><td>interop1: gre tunnel</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-tun02.tst">intop1-tun02.tst</a></td><td>success</td><td>interop1: ipip tunnel</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-tun03.tst">intop1-tun03.tst</a></td><td>success</td><td>interop1: vxlan tunnel</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop1-tun04.tst">intop1-tun04.tst</a></td><td>success</td><td>interop1: udp tunnel</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-bgp01.tst">intop2-bgp01.tst</a></td><td>success</td><td>interop2: ebgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-bgp02.tst">intop2-bgp02.tst</a></td><td>success</td><td>interop2: ibgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-bgp03.tst">intop2-bgp03.tst</a></td><td>success</td><td>interop2: bgp locpref</td></tr>
