@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.19-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-19 12:28:19, took 00:12:00, with 50 workers, on 857 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-12-19 12:58:03, took 00:10:05, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
